--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <meta name="author" content="OneUp">
     <link rel="canonical" href="https://startups.courses">
     <meta name="keywords"
-        content="Startups, startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training">
+        content="startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, startup india, startup ideas, startup in kolkata, startup meaning, startup business ideas, startupwala, startup india scheme, entrepreneurship, entrepreneurship development, Delhi Skill and Entrepreneurship University, shark tank, unicorn startup, what is startup, startup companies, new startup, startup funding, startups in india, global startup ecosystem index 2021, design a plan for your own startup and mention its financial aspects, 1 billion dollars in rupees, startup india is an initiative of the, what is unicorn startup, ankur warikoo startup course">
     <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up."
         property="og:description">
     <meta
         content="Navigating Your Journey of Entrepreneurship with One Up. We help companies grow by turning information into experiences people care about."
         property="og:description" />
-    <meta content="https://startups.courses/assets/img/cover.png" property="og:image" />
+    <meta content="https://startups.courses/assets/img/startup.webp" property="og:image" />
     <meta itemprop="name" content="OneUp">
     <meta itemprop="description" content="Tips & Tutorials for Navigating Your Journey of Entrepreneurship">
     <meta itemprop="image" content="https://startups.courses/assets/img/cover.png">
