--- a/enroll.html
+++ b/enroll.html
@@ -86,12 +86,12 @@
                         </div>
                     </form>
                     
-                    <!--<div id="form-alerts" class="success-message w-form-done">
+                    <div id="form-alerts" class="success-message w-form-done">
                         <div>Thank you! Your submission has been received!</div>
                     </div>
                     <div id="form-alerts" class="error-message w-form-fail">
-                        <div>Oops! Something went wrong while submitting the form.</div>
-                    </div>-->
+                        <div>Thank you! Your submission has been received!</div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
                                 loading="lazy" alt="" class="image contain" /></a>
                         <a href="https://twitter.com/" target="_blank" class="footer-social-link w-inline-block"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/6067715304473099d43366a4_Vector-2.svg"
-                                loading="lazy" alt="" class="image contain" /></a><a href="https://www.linkedin.com/"
+                                loading="lazy" alt="" class="image contain" /></a><a href="https://www.linkedin.com/company/oneupconsultancy"
                             target="_blank" class="footer-social-link w-inline-block"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771534e5efd48eb09ce63_Vector-1.svg"
                                 loading="lazy" alt="" class="image contain" /></a>
