--- a/intern.html
+++ b/intern.html
@@ -416,7 +416,7 @@
                             world.<br>Participating teams get a chance to get mentored by silicon valley mentors, global
                             leaders and leverage our resource materials, webinars, boot camps and support.
                             </br></div>
-                    </div><a href="#" target="_blank" class="button w-button">Apply Now</a>
+                    </div><a href="https://startups.courses/internship" target="_blank" class="button w-button">Apply Now</a>
                     <div class="home-3-hero-box-checklists">
                         <div class="home-3-hero-box-checklist-item margin-bottom-10-px">
                             <div class="home-3-hero-box-checkmark"><img
@@ -543,7 +543,7 @@
                                 loading="lazy" alt="" class="image contain" /></a>
                         <a href="https://twitter.com/" target="_blank" class="footer-social-link w-inline-block"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/6067715304473099d43366a4_Vector-2.svg"
-                                loading="lazy" alt="" class="image contain" /></a><a href="https://www.linkedin.com/"
+                                loading="lazy" alt="" class="image contain" /></a><a href="https://www.linkedin.com/company/oneupconsultancy"
                             target="_blank" class="footer-social-link w-inline-block"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771534e5efd48eb09ce63_Vector-1.svg"
                                 loading="lazy" alt="" class="image contain" /></a>
