--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-DHJ7XLDVF1');
 </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-218848711-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-218848711-1');
+</script>
     <link href="assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="assets/img/favicon.ico" rel="apple-touch-icon" />
 </head>
