--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="author" content="OneUp">
     <link rel="canonical" href="https://startups.courses">
     <meta name="keywords"
-        content="startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, startup india, startup ideas, startup in kolkata, startup meaning, startup business ideas, startupwala, startup india scheme, entrepreneurship, entrepreneurship development, Delhi Skill and Entrepreneurship University, shark tank, unicorn startup, what is startup, startup companies, new startup, startup funding, startups in india, global startup ecosystem index 2021, design a plan for your own startup and mention its financial aspects, 1 billion dollars in rupees, startup india is an initiative of the, what is unicorn startup, ankur warikoo startup course">
+        content="startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, startup india, startup ideas, startup in kolkata, startup meaning, startup business ideas, startupwala, startup india scheme, entrepreneurship, entrepreneurship development, Delhi Skill and Entrepreneurship University, shark tank, unicorn startup, what is startup, startup companies, new startup, startup funding, startups in india, global startup ecosystem index 2021, design a plan for your own startup and mention its financial aspects, 1 billion dollars in rupees, startup india is an initiative of the, what is unicorn startup, ankur warikoo startup course, upkey, startup incubator, startup acclerator, startup entrepreneur, business school, venture capital company, international business course, entrepreneur programs, startup help, executive mba, bba courses, online business school, bcom internships, bba internships, mba internships, mba program, part-time business school, weekend business school, human resource courses, venture capital funds">
     <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up."
         property="og:description">
     <meta
@@ -29,7 +29,7 @@
     <meta property="og:description"
         content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
     <meta property="og:site_name" content="OneUp">
-    <meta content="https://startups.courses/assets/img/cover.png" property="twitter:image" />
+    <meta content="https://startups.courses/assets/img/unity.png" property="twitter:image" />
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script type="text/javascript">
