--- a/about.html
+++ b/about.html
@@ -17,18 +17,18 @@
     <meta
         content="Navigating Your Journey of Entrepreneurship with One Up. We help companies grow by turning information into experiences people care about."
         property="og:description" />
-    <meta content="https://startups.courses/assets/img/cover.png" property="og:image" />
+    <meta content="https://startups.courses/assets/img/unity.png" property="og:image" />
     <meta itemprop="name" content="OneUp">
     <meta itemprop="description" content="Tips & Tutorials for Navigating Your Journey of Entrepreneurship">
-    <meta itemprop="image" content="https://startups.courses/assets/img/cover.png">
+    <meta itemprop="image" content="https://startups.courses/assets/img/unity.png">
     <meta property="og:title" content="OneUp - Let's Create a Startup">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://startups.courses/">
     <meta property="og:description"
         content="On a Mission to blueprint startups. OneUp teaches startups to kick start, to launch and grow using scientific methods and hands-on expertise. We make sure startups wield calculated risks to attain greatness. One Up is devoted in developing the bridge between the Public education system and Enterprise ecosystem. One Up integrates three important modules capable of making learning meaningful and connected with the demands of the 21st century. Learning these essential skills empowers and encourages success.help students to succeed in real life. The program contents are relevant and actual for the students and the teachers to experience a fun and quality time.">
     <meta property="og:site_name" content="OneUp">
-    <meta content="https://startups.courses/assets/img/cover.png" property="twitter:image" />
-    <link href="https://firebasestorage.googleapis.com/v0/b/oneup-8c6e3.appspot.com/o/public%2Fassets%2Fcss%2Fstyle.css?alt=media&token=38fe3b48-f88d-4046-a47e-bf6db6773731" rel="stylesheet" type="text/css" />
+    <meta content="https://startups.courses/assets/img/unity.png" property="twitter:image" />
+    <link href="https://startups.courses/assets/css/style.css" rel="stylesheet" type="text/css" />
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
