--- a/intern.html
+++ b/intern.html
@@ -7,7 +7,7 @@
     <meta
         content="From brand identity, through messaging strategy, to brand touchpoint experiences, we increase your opportunity to succeed."
         name="description" />
-    <meta content="100% Free Mentorship" property="og:title" />
+    <meta content="Get Paid Internships" property="og:title" />
     <meta
         content="From brand identity, through messaging strategy, to brand touchpoint experiences, we increase your opportunity to succeed."
         property="og:description" />
