--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <!-- This site was created by Master Subhajit Ghosh -->
 <!-- Last Published: Tue MAR 30 2022 16:12:58 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-page="6067703d73e522b1b1e4d13b" data-wf-site="6067703d73e522c2abe4d13a" data-wf-status="1">
+<html data-wf-page="6067703d73e522b1b1e4d13b" data-wf-site="6067703d73e522c2abe4d13a" data-wf-status="1" lang="en">
 
 <head>
     <meta charset="utf-8" />
