--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html data-wf-page="606d5652c48a2566ac941c18"
-    data-wf-site="6067703d73e522c2abe4d13a" data-wf-status="1">
+    data-wf-site="6067703d73e522c2abe4d13a" data-wf-status="1" lang"en">
 
 <head>
     <meta charset="utf-8" />
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-easing2="ease" role="banner" class="navigation w-nav">
                 <div class="wrapper navigation-wrapper">
                     <div class="navigation-left"><a href="/" class="navbar-brand w-nav-brand"><img
-                                src="https://startups.courses/assets/img/logo-white-modified.png" loading="lazy" alt=""
+                                src="https://startups.courses/assets/img/logo-white-modified.png" loading="lazy" alt="Logo"
                                 class="image contain" /></a>
                         <nav role="navigation" class="navigation-menu w-nav-menu">
                             <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
@@ -211,7 +211,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease"
                 data-easing2="ease" role="banner" class="navigation-mob w-nav">
                 <div class="wrapper navbar-wrapper"><a href="/" class="brand w-nav-brand"><img
-                            src="https://startups.courses/assets/img/logo-white-modified.png" loading="lazy" alt=""
+                            src="https://startups.courses/assets/img/logo-white-modified.png" loading="lazy" alt="Logo"
                             class="home-1-people-feedback-image" /></a>
                     <nav role="navigation" class="mobile-nav w-nav-menu">
                         <div class="mobile-nav-inner-flex">
@@ -332,7 +332,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div data-w-id="7d8b05fa-e0a6-cdb7-5883-eaa96bb9f938"
                 style="opacity:0;-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
                 class="about-1-hero-image"><img src="assets/img/squad.png" loading="lazy"
-                    sizes="(max-width: 767px) 90vw, (max-width: 1439px) 85vw, 1160px" alt="" class="image" /></div>
+                    sizes="(max-width: 767px) 90vw, (max-width: 1439px) 85vw, 1160px" alt="Team" class="image" /></div>
         </div>
     </div>
     <div class="about-3-team-section wf-section">
@@ -346,7 +346,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="team-grid-left">
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t1.png" loading="lazy" alt="" class="image">
+                        <div class="team-person-image"><img src="assets/img/t1.png" loading="lazy" alt="Master Subhajit Ghosh" class="image">
                         </div>
                         <div class="team-item-content">
                             <div class="team-name-wrapper">
@@ -364,7 +364,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t2.png" loading="lazy" alt="" class="image">
+                        <div class="team-person-image"><img src="assets/img/t2.png" loading="lazy" alt="Shaik Waseem" class="image">
                         </div>
                         <div class="team-item-content">
                             <div class="team-name-wrapper">
@@ -380,30 +380,71 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </div>
                     </div>
-                </div>
-                <!--<div class="team-grid-right">
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t3.png" loading="lazy" alt="" class="image">
+                        <div class="team-person-image"><img src="assets/img/t5.jpeg" loading="lazy"
+                                sizes="(max-width: 479px) 90vw, (max-width: 767px) 43vw, (max-width: 991px) 33vw, (max-width: 1279px) 20vw, 220px"
+                                alt="Soaib Ahmed" class="image"></div>
+                        <div class="team-item-content">
+                            <div class="team-name-wrapper">
+                                <h4><strong>Soaib Ahmed</strong></h4>
+                            </div>
+                            <div class="team-designation-wrapper">
+                                <div class="text-block medium"><strong>Program Initiator</strong></div>
+                            </div>
+                            <div class="team-about-wrapper">
+                                <div class="text-block _16-px brown">An Indian Software Evangelist. He was the president of
+                                tally Solutions. ‘Retail Leadership Awardee’ from the
+                                    Economic Times Now and was a member of
+                                NASSCOM.</div>
+                            </div>
+                        </div>
+                    </div> 
+                </div>
+                <div class="team-grid-right">
+                    <div class="team-grid-item"
+                        style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                        <div class="team-person-image"><img src="assets/img/t3.png" loading="lazy" alt="Pavan Soni" class="image">
                         </div>
                         <div class="team-item-content">
                             <div class="team-name-wrapper">
-                                <h4><strong>Dinnesh Prabhakaran</strong></h4>
+                                <h4><strong>Dr. Pavan Soni</strong></h4>
                             </div>
                             <div class="team-designation-wrapper">
-                                <div class="text-block medium"><strong><!--Co-Founder &amp;--> <!--CMO</strong></div>
+                                <div class="text-block medium"><strong>Program Initiator</strong></div>
                             </div>
                             <div class="team-about-wrapper">
-                                <div class="text-block _16-px brown">An Engineer, creator of electronic water management
-                                    systems startup - AQUA. Digital Marketing expert scaling OneUp.</div>
+                                <div class="text-block _16-px brown">An Innovation Evangelist by profession and a teacher by
+                                  passion. He is the founder of Inflexion Point, offering
+                                    programs on Design Thinking, Strategic Acumen, and
+                                  Consulting Skills.</div>
                             </div>
                         </div>
-                    </div>-->
+                    </div>
+                    <div class="team-grid-item"
+                        style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                        <div class="team-person-image"><img src="assets/img/t6.jpeg" loading="lazy"
+                                sizes="(max-width: 479px) 90vw, (max-width: 767px) 43vw, (max-width: 991px) 33vw, (max-width: 1279px) 20vw, 220px"
+                                alt="Arif Pasha" class="image"></div>
+                        <div class="team-item-content">
+                            <div class="team-name-wrapper">
+                                <h4><strong>Arif Pasha</strong></h4>
+                            </div>
+                            <div class="team-designation-wrapper">
+                                <div class="text-block medium"><strong>Speaker</strong></div>
+                            </div>
+                            <div class="team-about-wrapper">
+                                <div class="text-block _16-px brown">One of the most prominent life coach in the country, he is
+                                    one of the chief trainers of One Up, management trainer,
+                                 motivational speaker, mentor, and a noted host.</div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
                         <div class="team-person-image"><img src="assets/img/t4.png" loading="lazy"
                                 sizes="(max-width: 479px) 90vw, (max-width: 767px) 43vw, (max-width: 991px) 33vw, (max-width: 1279px) 20vw, 220px"
-                                alt="" class="image"></div>
+                                alt="Sumit Paul" class="image"></div>
                         <div class="team-item-content">
                             <div class="team-name-wrapper">
                                 <h4><strong>Sumit Paul</strong></h4>
@@ -483,7 +524,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                             <div class="about-1-tab-pane-image"><img
                                     src="https://media.istockphoto.com/photos/cheerful-woman-and-her-business-plan-picture-id1282110628?b=1&k=20&m=1282110628&s=170667a&w=0&h=NDDPlHUlIblxtIa6J0NIv81PGbG-G6GMPTirGuKEV7I="
-                                    loading="lazy" alt="" class="image" /></div>
+                                    loading="lazy" alt="Picture" class="image" /></div>
                         </div>
                     </div>
                     <div data-w-tab="Tab 2" class="about-1-tab-pane w-tab-pane">
@@ -505,7 +546,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     loading="lazy"
                                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 76vw, (max-width: 991px) 34vw, (max-width: 1439px) 31vw, 399.5px"
                                     srcset="https://assets.website-files.com/6067703d73e522c2abe4d13a/60918094276e2956da9fc936_image%209-min-p-500.jpeg 500w, https://assets.website-files.com/6067703d73e522c2abe4d13a/60918094276e2956da9fc936_image%209-min.jpg 750w"
-                                    alt="" class="image" /></div>
+                                    alt="Picture" class="image" /></div>
                         </div>
                     </div>
                     <div data-w-tab="Tab 3" class="about-1-tab-pane w-tab-pane">
@@ -528,7 +569,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     loading="lazy"
                                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 76vw, (max-width: 991px) 34vw, (max-width: 1439px) 31vw, 399.5px"
                                     srcset="https://assets.website-files.com/6067703d73e522c2abe4d13a/6090e094b256534706a2973a_pexels-fauxels-3184357-min-p-500.jpeg 500w, https://assets.website-files.com/6067703d73e522c2abe4d13a/6090e094b256534706a2973a_pexels-fauxels-3184357-min-p-1080.jpeg 1080w, https://assets.website-files.com/6067703d73e522c2abe4d13a/6090e094b256534706a2973a_pexels-fauxels-3184357-min.jpg 1297w"
-                                    alt="" class="image" /></div>
+                                    alt="Picture" class="image" /></div>
                         </div>
                     </div>
                     <div data-w-tab="Tab 4" class="about-1-tab-pane w-tab-pane">
@@ -551,7 +592,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     loading="lazy"
                                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 76vw, (max-width: 991px) 34vw, (max-width: 1439px) 31vw, 399.5px"
                                     srcset="https://assets.website-files.com/6067703d73e522c2abe4d13a/6090de7894ae58ad3d6661a8_pexels-proxyclick-visitor-management-system-2451617-min-p-500.jpeg 500w, https://assets.website-files.com/6067703d73e522c2abe4d13a/6090de7894ae58ad3d6661a8_pexels-proxyclick-visitor-management-system-2451617-min-p-1080.jpeg 1080w, https://assets.website-files.com/6067703d73e522c2abe4d13a/6090de7894ae58ad3d6661a8_pexels-proxyclick-visitor-management-system-2451617-min-p-1600.jpeg 1600w, https://assets.website-files.com/6067703d73e522c2abe4d13a/6090de7894ae58ad3d6661a8_pexels-proxyclick-visitor-management-system-2451617-min-p-2000.jpeg 2000w, https://assets.website-files.com/6067703d73e522c2abe4d13a/6090de7894ae58ad3d6661a8_pexels-proxyclick-visitor-management-system-2451617-min-p-2600.jpeg 2600w, https://assets.website-files.com/6067703d73e522c2abe4d13a/6090de7894ae58ad3d6661a8_pexels-proxyclick-visitor-management-system-2451617-min.jpg 2674w"
-                                    alt="" class="image" /></div>
+                                    alt="Picture" class="image" /></div>
                         </div>
                     </div>
                     <div data-w-tab="Tab 5" class="about-1-tab-pane w-tab-pane">
@@ -573,7 +614,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2832&q=80"
                                     loading="lazy"
                                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 76vw, (max-width: 991px) 34vw, (max-width: 1439px) 31vw, 399.5px"
-                                    alt="" class="image" /></div>
+                                    alt="Picture" class="image" /></div>
                         </div>
                     </div>
                     <div data-w-tab="Tab 6" class="about-1-tab-pane w-tab-pane">
@@ -594,7 +635,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     src="https://images.unsplash.com/photo-1521791136064-7986c2920216?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1469&q=80"
                                     loading="lazy"
                                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 76vw, (max-width: 991px) 34vw, (max-width: 1439px) 31vw, 399.5px"
-                                    alt="" class="image" /></div>
+                                    alt="Picture" class="image" /></div>
                         </div>
                     </div>
                     <div data-w-tab="Tab 7" class="about-1-tab-pane w-tab-pane">
@@ -615,7 +656,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     src="https://images.unsplash.com/photo-1591696205602-2f950c417cb9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
                                     loading="lazy"
                                     sizes="(max-width: 479px) 90vw, (max-width: 767px) 76vw, (max-width: 991px) 34vw, (max-width: 1439px) 31vw, 399.5px"
-                                    alt="" class="image" /></div>
+                                    alt="Picture" class="image" /></div>
                         </div>
                     </div>
                 </div>
@@ -769,17 +810,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             href="https://www.facebook.com/" target="_blank"
                             class="footer-social-link w-inline-block"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/60677153f4f8b17dd57bebe7_Vector-3.svg"
-                                loading="lazy" alt="" class="image contain" /></a>
+                                loading="lazy" alt="Facebook" class="image contain" /></a>
                         <a href="https://twitter.com/" target="_blank" class="footer-social-link w-inline-block"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/6067715304473099d43366a4_Vector-2.svg"
-                                loading="lazy" alt="" class="image contain" /></a><a href="https://www.linkedin.com/"
+                                loading="lazy" alt="Twitter" class="image contain" /></a><a href="https://www.linkedin.com/"
                             target="_blank" class="footer-social-link w-inline-block"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771534e5efd48eb09ce63_Vector-1.svg"
-                                loading="lazy" alt="" class="image contain" /></a>
+                                loading="lazy" alt="LinkedIn" class="image contain" /></a>
                         <a href="https://www.instagram.com/" target="_blank"
                             class="footer-social-link w-inline-block"><img
                                 src="https://assets.website-files.com/6067703d73e522c2abe4d13a/606771548d2cabe6dc29653f_Group%20897.svg"
-                                loading="lazy" alt="" class="image contain" /></a>
+                                loading="lazy" alt="Instagram" class="image contain" /></a>
                     </div>
                 </div>
             </div>
