--- a/about.html
+++ b/about.html
@@ -404,7 +404,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="team-grid-right">
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t3.png" loading="lazy" alt="Pavan Soni" class="image">
+                        <div class="team-person-image"><img src="https://startups.courses/assets/img/t3.jpeg" loading="lazy" alt="Pavan Soni" class="image">
                         </div>
                         <div class="team-item-content">
                             <div class="team-name-wrapper">
