--- a/about.html
+++ b/about.html
@@ -346,7 +346,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="team-grid-left">
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t1.png" loading="lazy" alt="Master Subhajit Ghosh" class="image">
+                        <div class="team-person-image"><img src="https://startups.courses/assets/img/t1.png" loading="lazy" alt="Master Subhajit Ghosh" class="image">
                         </div>
                         <div class="team-item-content">
                             <div class="team-name-wrapper">
@@ -364,7 +364,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t2.png" loading="lazy" alt="Shaik Waseem" class="image">
+                        <div class="team-person-image"><img src="https://startups.courses/assets/img/t2.png" loading="lazy" alt="Shaik Waseem" class="image">
                         </div>
                         <div class="team-item-content">
                             <div class="team-name-wrapper">
@@ -382,7 +382,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t5.jpeg" loading="lazy"
+                        <div class="team-person-image"><img src="https://startups.courses/assets/img/t5.jpeg" loading="lazy"
                                 sizes="(max-width: 479px) 90vw, (max-width: 767px) 43vw, (max-width: 991px) 33vw, (max-width: 1279px) 20vw, 220px"
                                 alt="Soaib Ahmed" class="image"></div>
                         <div class="team-item-content">
@@ -423,7 +423,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t6.jpeg" loading="lazy"
+                        <div class="team-person-image"><img src="https://startups.courses/assets/img/t6.jpeg" loading="lazy"
                                 sizes="(max-width: 479px) 90vw, (max-width: 767px) 43vw, (max-width: 991px) 33vw, (max-width: 1279px) 20vw, 220px"
                                 alt="Arif Pasha" class="image"></div>
                         <div class="team-item-content">
@@ -442,7 +442,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="team-grid-item"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                        <div class="team-person-image"><img src="assets/img/t4.png" loading="lazy"
+                        <div class="team-person-image"><img src="https://startups.courses/assets/img/t4.png" loading="lazy"
                                 sizes="(max-width: 479px) 90vw, (max-width: 767px) 43vw, (max-width: 991px) 33vw, (max-width: 1279px) 20vw, 220px"
                                 alt="Sumit Paul" class="image"></div>
                         <div class="team-item-content">
