--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <title>One Up - Let's Meet Our Team</title>
     <meta name="author" content="OneUp">
-    <link rel="canonical" href="https://startups.courses">
+    <link rel="canonical" href="https://startups.courses/about">
     <meta name="keywords"
         content="Startups, startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training">
     <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up."
