--- a/about.html
+++ b/about.html
@@ -387,7 +387,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 alt="Soaib Ahmed" class="image"></div>
                         <div class="team-item-content">
                             <div class="team-name-wrapper">
-                                <h4><strong>Soaib Ahmed</strong></h4>
+                                <h4><strong>Shoaib Ahmed</strong></h4>
                             </div>
                             <div class="team-designation-wrapper">
                                 <div class="text-block medium"><strong>Program Initiator</strong></div>
