--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- This site was created by Master Subhajt. http://www.mastersubhajit.com -->
 <html data-wf-page="60827cce9168ca4a4df5ac05"
-  data-wf-site="6067703d73e522c2abe4d13a" data-wf-status="1">
+  data-wf-site="6067703d73e522c2abe4d13a" data-wf-status="1" lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <title>Contact - One Up Consultancy</title>
   <meta name="author" content="OneUp">
-  <link rel="canonical" href="https://startups.courses">
+  <link rel="canonical" href="https://startups.courses/contact">
   <meta name="keywords"
     content="Startups, startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, business course, entrepreneurship course, business schools, upkey, executive mba, weekend business school, online business school, bba internship, business school course">
   <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up." property="og:description">
