--- a/courses.html
+++ b/courses.html
@@ -2,13 +2,13 @@
 <html
   data-wf-page="608265809de4cf7b2344f1f2"
   data-wf-site="6067703d73e522c2abe4d13a"
-  data-wf-status="1"
+  data-wf-status="1" lang="en"
 >
   <head>
     <meta charset="utf-8" />
     <title>Entrepreneurship Courses | One Up</title>
     <meta name="author" content="OneUp">
-    <link rel="canonical" href="https://startups.courses">
+    <link rel="canonical" href="https://startups.courses/courses">
     <meta name="keywords"
         content="startups, oneup, oneup education, oneup.com, startup courses free online, online startup courses, entrepreneurship, how to become an entrepreneur, free courses, certification courses, paid internships, workshops training, startup india, startup ideas, startup in kolkata, startup meaning, startup business ideas, startupwala, startup india scheme, entrepreneurship, entrepreneurship development, Delhi Skill and Entrepreneurship University, shark tank, unicorn startup, what is startup, startup companies, new startup, startup funding, startups in india, global startup ecosystem index 2021, design a plan for your own startup and mention its financial aspects, 1 billion dollars in rupees, startup india is an initiative of the, what is unicorn startup, ankur warikoo startup course, upkey, startup incubator, startup acclerator, startup entrepreneur, business school, venture capital company, international business course, entrepreneur programs, startup help, executive mba, bba courses, online business school, bcom internships, bba internships, mba internships, mba program, part-time business school, weekend business school, human resource courses, venture capital funds">
     <meta name="description" content="Navigating Your Journey of Entrepreneurship with One Up."
